--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
                 
                 <!-- INFORMACIÓN PERSONAL - MODIFICAR AQUÍ -->
                 <div class="profile-info">
-                    <h1 class="profile-name">Tu Nombre</h1>
-                    <h2 class="profile-lastname">Tu Apellido</h2>
+                    <h1 class="profile-name">Gonzalo</h1>
+                    <h2 class="profile-lastname">Torres</h2>
                     <div class="profile-details">
-                        <p class="profile-age">Edad: 99 años</p>
-                        <p class="profile-location">📍 Zona de Residencia</p>
-                        <p class="profile-career">🎓 Tu Carrera</p>
+                        <p class="profile-age">Edad: 21 años</p>
+                        <p class="profile-location">📍 CABA</p>
+                        <p class="profile-career">🎓 Lic. en Comunicación Digital</p>
                     </div>
                 </div>
             </div>
