--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
                 
                 <!-- PELÍCULAS FAVORITAS - MODIFICAR AQUÍ -->
                 <div class="favorites-list">
-                    <div class="favorite-item">1. Nombre de la Película 1</div>
-                    <div class="favorite-item">2. Nombre de la Película 2</div>
-                    <div class="favorite-item">3. Nombre de la Película 3</div>
+                    <div class="favorite-item">1. El quinto elemento </div>
+                    <div class="favorite-item">2. El hotel budapest </div>
+                    <div class="favorite-item">3. El silencio de los inocentes</div>
                 </div>
             </div>
             
