--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <span class="skill-name">Diseño Web</span>
                     </div>
                     <div class="skill-item">
-                        <span class="skill-name">Análisis de Datos</span>
+                        <span class="skill-name">Edicion Audiovisual</span>
                     </div>
                     <div class="skill-item">
                         <span class="skill-name">Comunicación</span>
@@ -92,9 +92,9 @@
                 
                 <!-- DISCOS FAVORITOS - MODIFICAR AQUÍ -->
                 <div class="favorites-list">
-                    <div class="favorite-item">1. Nombre del Disco 1</div>
-                    <div class="favorite-item">2. Nombre del Disco 2</div>
-                    <div class="favorite-item">3. Nombre del Disco 3</div>
+                    <div class="favorite-item">1. Twin Fantasy de CSHR</div>
+                    <div class="favorite-item">2. Turn On The Bright Lights de Interpol</div>
+                    <div class="favorite-item">3. Cancion animal de Soda Stereo</div>
                 </div>
             </div>
             
