--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="profile-header">
                 <!-- FOTO DE PERFIL - MODIFICAR AQUÍ -->
                 <div class="profile-image-container">
-                    <img src="https://instagram.faep8-1.fna.fbcdn.net/v/t51.2885-19/281907842_375071491327606_466321451590712099_n.jpg?stp=dst-jpg_s150x150_tt6&efg=eyJ2ZW5jb2RlX3RhZyI6InByb2ZpbGVfcGljLmRqYW5nby4xMDgwLmMyIn0&_nc_ht=instagram.faep8-1.fna.fbcdn.net&_nc_cat=110&_nc_oc=Q6cZ2QEXbXordfOTavm9LrxZ7xt9-tc7zPyEZi3JR7zAS-aY00c_-zzM0jegD9Hw8SAyNh_hlZH_DE-KXYRsj3_5_0h8&_nc_ohc=aCmyCV5rVD0Q7kNvwG1MnNx&_nc_gid=KiH2w5bs1SmNnRrPvZ1FRg&edm=AOQ1c0wBAAAA&ccb=7-5&oh=00_AfWvHKbpxZVJf2w2c0mWWep8VcVSqW_-fHvPsxK1Uza66w&oe=689FF12B&_nc_sid=8b3546" 
+                    <img src="aerarwrqrqr.png" 
                          alt="Foto de perfil" 
                          class="profile-image">
                 </div>
